--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "url": "git+https://github.com/k-landon/venti.git"
   },
 	"dependencies": {
-    "discord.js": "^13.5.0"
+    "discord.js": "^13.5.0",
+		"node.js": "^16.13.0"
   },
   "author": "",
   "license": "ISC",
