--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "async": "^3.2.2",
     "discord.js": "^13.5.0",
+    "dotenv": "^10.0.0",
     "mogodb": "^0.0.1-security",
     "mongoose": "^6.1.4",
     "node.js": "^0.0.1-security"
